# rust-book

./: Cargo.toml  README.md
.run/: Run chapter 12 listing_01.run.xml  Run chapter 12 listing_02.run.xml  Run chapter 12 listing_04.run.xml  Run chapter 12 listing_05.run.xml  Run chapter 12 listing_06.run.xml  Run chapter 12 listing_07.run.xml  Run chapter 12 listing_10.run.xml  Run chapter 12 listing_11.run.xml  Run chapter 12 listing_13 with read error.run.xml  Run chapter 12 listing_19 run.run.xml  Run chapter 12 listing_19 test.run.xml  Run chapter 12 listing_21 test.run.xml  Run chapter 12 listing_22 ignore_case.run.xml  Run chapter 12 listing_22.run.xml  Run chapter-9.run.xml  run chapter-13.run.xml  run chapter-6.run.xml  run chapter-8.run.xml  run chapter_4.run.xml  run chapter_5.run.xml  run chapter_6.run.xml  run chapter_9.run.xml  rustlings chapter-10a.run.xml  rustlings chapter-8.run.xml
.run/runConfigurations/: run chapter_4.run.xml
chapter-10-traits-lib/: Cargo.toml
chapter-10-traits-lib/src/: lib.rs
chapter-10a-generics/: Cargo.toml
chapter-10a-generics/rustlings/: Cargo.toml
chapter-10a-generics/rustlings/exercises/: quiz1.rs
chapter-10a-generics/src/: main.rs
chapter-10a/src/: main.rs
chapter-10b/: Cargo.toml
chapter-10b-traits/: Cargo.toml
chapter-10b-traits/src/: main.rs
chapter-10b/src/: main.rs
chapter-10c/: Cargo.toml
chapter-10c-lifetimes/: Cargo.toml
chapter-10c-lifetimes/src/: main.rs
chapter-10c/src/: main.rs
chapter-11/: Cargo.toml
chapter-11/src/: lib.rs
chapter-12/: Cargo.toml
chapter-12/chapter-9/: Cargo.toml
chapter-12/chapter-9/src/: helpers.rs  lib.rs  mane_error.rs
chapter-12/src/: lib.rs
chapter-13/: Cargo.toml
chapter-13/rustlings/: Cargo.toml
chapter-13/src/: main.rs
chapter-14/: Cargo.toml
chapter-14/src/: lib.rs
chapter-15/: Cargo.toml
chapter-15/rustlings/: Cargo.toml
chapter-15/rustlings/exercises/: quiz1.rs  quiz2.rs
chapter-15/src/: main.rs  simple_ptr.rs
chapter-16/: Cargo.toml
chapter-16/rustlings/: Cargo.toml
chapter-16/rustlings/exercises/: quiz3.rs
chapter-16/src/: main.rs
chapter-17/: Cargo.toml
chapter-17/src/: main.rs
chapter-18/: Cargo.toml
chapter-18/src/: main.rs
chapter-3/: Cargo.toml
chapter-3/src/: main.rs
chapter-4/src/: main.rs
chapter-5/: Cargo.toml
chapter-5/src/: main.rs
chapter-6/: Cargo.toml
chapter-6/rustlings/: Cargo.toml
chapter-6/src/: main.rs
chapter-7/: CHAPTER_7.md
chapter-7/a_normal_binary/: Cargo.toml
chapter-7/b_normal_library/: Cargo.toml
chapter-7/e_pub_vs_private/: Cargo.toml
chapter-7/e_pub_vs_private/src/: lib.rs
chapter-7/rustlings/: Cargo.toml
chapter-8/: Cargo.toml
chapter-8/rustlings/: Cargo.toml
chapter-8/src/: main.rs
chapter-9/: Cargo.toml
chapter-9/src/error_libraries/: anyhow.rs  mod.rs  thiserror.rs
chapter_10a/: Cargo.toml
chapter_10b/: Cargo.toml
chapter_10c/: Cargo.toml
chapter_11/: Cargo.toml
chapter_11/src/: lib.rs
chapter_4/: Cargo.toml
chapter_4/src/: main.rs
chapter_5/src/: main.rs
chapter_6/src/: main.rs
chapter_7/b_normal_library/src/: lib.rs
chapter_7/c_multiple_crates/: Cargo.toml
chapter_7/c_multiple_crates/src/: lib.rs
chapter_7/d_custom_crate_files/: Cargo.toml  weird_file_location_1.rs  weird_file_location_2.rs
chapter_9/: Cargo.toml
chapter_9/src/: main.rs
(+115 files in other folders)
